crates/compiler/semantic/src/validation/tests/snapshots/cairo_m_compiler_semantic__validation__tests__namespace_scoping_errors_diagnostics.snap
---
source: crates/compiler/semantic/src/validation/tests/mod.rs
expression: snapshot_content
---
Fixture: namespace_scoping_errors.cm
============================================================
Source code:
namespace TestNamespace {
    const NAMESPACE_CONST = 100;

    func helper() -> felt {
        return NAMESPACE_CONST;
    }
}

func test() {
    let x = NAMESPACE_CONST; // Should error: Undeclared variable 'NAMESPACE_CONST'
    let y = helper(); // Should error: Undeclared variable 'helper'
}

============================================================
Found 5 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'NAMESPACE_CONST'
    ╭─[ <unknown>:10:13 ]
    │
 10 │     let x = NAMESPACE_CONST; // Should error: Undeclared variable 'NAMESPACE_CONST'
    │             ───────┬───────  
    │                    ╰───────── Undeclared variable 'NAMESPACE_CONST'
────╯

--- Diagnostic 2 ---
[1001] Error: Undeclared variable 'helper'
    ╭─[ <unknown>:11:13 ]
    │
 11 │     let y = helper(); // Should error: Undeclared variable 'helper'
    │             ───┬──  
    │                ╰──── Undeclared variable 'helper'
────╯

--- Diagnostic 3 ---
[1002] Warning: Unused variable 'TestNamespace'
   ╭─[ <unknown>:1:11 ]
   │
 1 │ namespace TestNamespace {
   │           ──────┬──────  
   │                 ╰──────── Unused variable 'TestNamespace'
───╯

--- Diagnostic 4 ---
[1002] Warning: Unused variable 'x'
    ╭─[ <unknown>:10:9 ]
    │
 10 │     let x = NAMESPACE_CONST; // Should error: Undeclared variable 'NAMESPACE_CONST'
    │         ┬  
    │         ╰── Unused variable 'x'
────╯

--- Diagnostic 5 ---
[1002] Warning: Unused variable 'y'
    ╭─[ <unknown>:11:9 ]
    │
 11 │     let y = helper(); // Should error: Undeclared variable 'helper'
    │         ┬  
    │         ╰── Unused variable 'y'
────╯
